--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 /* main */
 .wrap .main{padding-top:80px;width:100%;}
 .wrap h2{text-align:center;padding-top:20px;letter-spacing:-2px;}
+.wrap .main .select_area{width:fit-content;padding-top:100px;margin:0 auto;}
+.wrap .main .select_area select{width:300px;padding:10px;border-radius:5px;font-size:16px;}
+.wrap .main .select_area select:focus{outline: 3px solid #547dab;}
 /* card_section */
 .wrap .card_section ul{display:flex;flex-wrap:wrap;justify-content:center;}
 /* card */
@@ -30,12 +33,15 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 .wrap .card_section ul li .card_wrap .front,
 .wrap .card_section ul li .card_wrap .back{ position: absolute;width: 100%; height: 100%;backface-visibility: hidden;border-radius:17px;box-shadow: 5px 5px 20px #ccc;}
 .wrap .card_section ul li .card_wrap .front {background:url('../img/card_img.jpg') 0 0 / 100%;}
-.wrap .card_section ul li .card_wrap .back {transform: rotateY(180deg);border:solid 10px #714f4f;box-sizing:border-box;}
+.wrap .card_section ul li .card_wrap .back {transform: rotateY(180deg);border:solid 10px #3b3535;box-sizing:border-box;}
 .wrap .card_section ul li.card01 .card_wrap .back {background:url('../img/card01.webp') 0 30px/ 100% no-repeat;}
 .wrap .card_section ul li.card02 .card_wrap .back {background:url('../img/card02.webp') 0 30px/ 100% no-repeat;}
 .wrap .card_section ul li.card03 .card_wrap .back {background:url('../img/card03.webp') 0 30px/ 100% no-repeat;}
 .wrap .card_section ul li.card04 .card_wrap .back {background:url('../img/card04.webp') 0 30px/ 100% no-repeat;}
 .wrap .card_section ul li.card05 .card_wrap .back {background:url('../img/card05.webp') 0 30px/ 100% no-repeat;}
 .wrap .card_section ul li.card06 .card_wrap .back {background:url('../img/card06.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section ul li.card07 .card_wrap .back {background:url('../img/card07.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section ul li.card08 .card_wrap .back {background:url('../img/card08.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section ul li.card09 .card_wrap .back {background:url('../img/card09.webp') 0 30px/ 100% no-repeat;}
 .wrap .card_section ul li .card_wrap.on{transform: rotateY(180deg);}
 .wrap .card_section ul li.off{opacity:0;}
