--- a/css/style.css
+++ b/css/style.css
@@ -21,27 +21,52 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 }
 /* main */
 .wrap .main{padding-top:80px;width:100%;}
-.wrap h2{text-align:center;padding-top:20px;letter-spacing:-2px;}
+.wrap h2{text-align:center;padding-top:60px;letter-spacing:-2px;}
 .wrap .main .select_area{width:fit-content;padding-top:100px;margin:0 auto;}
 .wrap .main .select_area select{width:300px;padding:10px;border-radius:5px;font-size:16px;}
 .wrap .main .select_area select:focus{outline: 3px solid #547dab;}
 /* card_section */
-.wrap .card_section ul{display:flex;flex-wrap:wrap;justify-content:center;}
+.wrap .card_section ul{display:flex;flex-wrap:wrap;justify-content:center;padding-top:120px;}
 /* card */
-.wrap .card_section ul li{width:200px;height:279px;perspective: 1100px;margin:0 10px 20px 0;transition: .2s;}
-.wrap .card_section ul li .card_wrap{ width: 100%; height: 100%; position: relative;transition: .3s;transform-style: preserve-3d;}
-.wrap .card_section ul li .card_wrap .front,
-.wrap .card_section ul li .card_wrap .back{ position: absolute;width: 100%; height: 100%;backface-visibility: hidden;border-radius:17px;box-shadow: 5px 5px 20px #ccc;}
-.wrap .card_section ul li .card_wrap .front {background:url('../img/card_img.jpg') 0 0 / 100%;}
-.wrap .card_section ul li .card_wrap .back {transform: rotateY(180deg);border:solid 10px #3b3535;box-sizing:border-box;}
-.wrap .card_section ul li.card01 .card_wrap .back {background:url('../img/card01.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section ul li.card02 .card_wrap .back {background:url('../img/card02.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section ul li.card03 .card_wrap .back {background:url('../img/card03.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section ul li.card04 .card_wrap .back {background:url('../img/card04.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section ul li.card05 .card_wrap .back {background:url('../img/card05.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section ul li.card06 .card_wrap .back {background:url('../img/card06.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section ul li.card07 .card_wrap .back {background:url('../img/card07.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section ul li.card08 .card_wrap .back {background:url('../img/card08.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section ul li.card09 .card_wrap .back {background:url('../img/card09.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section ul li .card_wrap.on{transform: rotateY(180deg);}
-.wrap .card_section ul li.off{opacity:0;}
+.wrap .card_section > ul > li{width:200px;height:279px;perspective: 1100px;margin:0 10px 20px 0;transition: .2s;}
+.wrap .card_section > ul > li .card_wrap{ width: 100%; height: 100%; position: relative;transition: .3s;transform-style: preserve-3d;}
+.wrap .card_section > ul > li .card_wrap .front,
+.wrap .card_section > ul > li .card_wrap .back{ position: absolute;width: 100%; height: 100%;backface-visibility: hidden;border-radius:17px;box-shadow: 5px 5px 20px #ccc;}
+.wrap .card_section > ul > li .card_wrap .front {background:url('../img/card_img.jpg') 0 0 / 100%;}
+.wrap .card_section > ul > li .card_wrap .back {transform: rotateY(180deg);border:solid 10px #3b3535;box-sizing:border-box;}
+.wrap .card_section > ul > li.card01 .card_wrap .back {background:url('../img/card01.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section > ul > li.card02 .card_wrap .back {background:url('../img/card02.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section > ul > li.card03 .card_wrap .back {background:url('../img/card03.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section > ul > li.card04 .card_wrap .back {background:url('../img/card04.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section > ul > li.card05 .card_wrap .back {background:url('../img/card05.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section > ul > li.card06 .card_wrap .back {background:url('../img/card06.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section > ul > li.card07 .card_wrap .back {background:url('../img/card07.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section > ul > li.card08 .card_wrap .back {background:url('../img/card08.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section > ul > li.card09 .card_wrap .back {background:url('../img/card09.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section > ul > li .card_wrap.on{transform: rotateY(180deg);}
+.wrap .card_section > ul > li.off{opacity:0;}
+
+/* 이미지선택->마리오 */
+.wrap .card_section .mario li.card01 .card_wrap .back {background:url('../img/card01.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card02 .card_wrap .back {background:url('../img/card02.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card03 .card_wrap .back {background:url('../img/card03.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card04 .card_wrap .back {background:url('../img/card04.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card05 .card_wrap .back {background:url('../img/card05.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card06 .card_wrap .back {background:url('../img/card06.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card07 .card_wrap .back {background:url('../img/card07.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card08 .card_wrap .back {background:url('../img/card08.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card09 .card_wrap .back {background:url('../img/card09.webp') 0 30px/ 100% no-repeat;}
+
+/* top_menu */
+.top_menu{width:100%;padding:30px 5% 20px;margin-left:-50%;;display:flex;align-items: center;justify-content:space-between;position:fixed;top:-10px;left:50%;z-index:10;box-sizing:border-box;}
+.top_menu .bg{background:#fff;filter:blur(5px);position:absolute;z-index:-1;top:0;left:0;width:100%;height:100%;opacity:.9;}
+.top_menu a[class^=btn]{display:block;font-size:0;text-indent:-999999px;transition:.2s;}
+.top_menu a[class^=btn]:hover{opacity:.5;filter:blur(1px);}
+.top_menu a.btn_back{background-image:url(../img/go_back.png);width:43px;height:43px;background-size:100%;}
+.top_menu a.btn_hint{background-image:url(../img/hint_icon.png);background-size:100%;background-position:50%;width:50px;height:50px;}
+.top_menu a.btn_hint.off{opacity:.5;cursor:not-allowed;}
+.top_menu .hint_section{display:flex;align-items: center;margin-left:-50%;}
+.top_menu .hint_section p{margin-left:10px;letter-spacing:-1px;font-size:18px;}
+.top_menu .life ul{padding:0;}
+.top_menu .life ul li{width:40px;height:40px;background-image:url(../img/life_img.png);background-size:100%;}
+.top_menu .life ul li.off{filter:grayscale(1);opacity:.4;}
