--- a/css/style.css
+++ b/css/style.css
@@ -47,15 +47,15 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 .wrap .card_section > ul > li.off{opacity:0;}
 
 /* 이미지선택->마리오 */
-.wrap .card_section .mario li.card01 .card_wrap .back {background:url('../img/card01.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section .mario li.card02 .card_wrap .back {background:url('../img/card02.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section .mario li.card03 .card_wrap .back {background:url('../img/card03.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section .mario li.card04 .card_wrap .back {background:url('../img/card04.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section .mario li.card05 .card_wrap .back {background:url('../img/card05.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section .mario li.card06 .card_wrap .back {background:url('../img/card06.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section .mario li.card07 .card_wrap .back {background:url('../img/card07.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section .mario li.card08 .card_wrap .back {background:url('../img/card08.webp') 0 30px/ 100% no-repeat;}
-.wrap .card_section .mario li.card09 .card_wrap .back {background:url('../img/card09.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card01 .card_wrap .back {background:url('../img/card_v2_01.webp') 0 30px/ 100% no-repeat;}
+.wrap .card_section .mario li.card02 .card_wrap .back {background:url('../img/card_v2_02.webp') 32px 32px/ 58% no-repeat;}
+.wrap .card_section .mario li.card03 .card_wrap .back {background:url('../img/card_v2_03.webp') 20px 30px/ 84% no-repeat;}
+.wrap .card_section .mario li.card04 .card_wrap .back {background:url('../img/card_v2_04.webp') 31px 41px/ 69% no-repeat;}
+.wrap .card_section .mario li.card05 .card_wrap .back {background:url('../img/card_v2_05.webp') 30px 43px/ 64% no-repeat}
+.wrap .card_section .mario li.card06 .card_wrap .back {background:url('../img/card_v2_06.webp') -17px 45px/ 116% no-repeat;}
+.wrap .card_section .mario li.card07 .card_wrap .back {background:url('../img/card_v2_07.webp') 30px 53px/ 71% no-repeat;}
+.wrap .card_section .mario li.card08 .card_wrap .back {background:url('../img/card_v2_08.webp') 18px 46px/ 80% no-repeat;}
+.wrap .card_section .mario li.card09 .card_wrap .back {background:url('../img/card_v2_09.webp') 33px 76px/ 67% no-repeat;}
 
 /* top_menu */
 .top_menu{width:100%;padding:30px 5% 20px;margin-left:-50%;;display:flex;align-items: center;justify-content:space-between;position:fixed;top:-10px;left:50%;z-index:10;box-sizing:border-box;}
