--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 .btnBlueGreen.btnPush:hover {box-shadow: 0px 0px 0px 0px #007144;}
 .btnBlueGreen.btnFloat:before {background:#00AE68;}
 
-.wrap{width:990;margin:0 auto;}
+.wrap{width:990px;margin:0 auto;}
 @media screen and (max-width: 1000px) {
 	.wrap {
         width:100%;
@@ -23,7 +23,7 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 .wrap .main{padding-top:80px;width:100%;}
 .wrap h2{text-align:center;padding-top:60px;letter-spacing:-2px;}
 .wrap .main .select_area{width:fit-content;padding-top:100px;margin:0 auto;}
-.wrap .main .select_area select{width:300px;padding:10px;border-radius:5px;font-size:16px;}
+.wrap .main .select_area select{width:300px;padding:10px;margin-bottom:10px;border-radius:5px;font-size:16px;}
 .wrap .main .select_area select:focus{outline: 3px solid #547dab;}
 /* card_section */
 .wrap .card_section ul{display:flex;flex-wrap:wrap;justify-content:center;padding-top:120px;}
@@ -48,7 +48,13 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 
 /* 결과화면 */
 .fail_section,
-.result{padding-top:110px;}
+.result{padding:110px 0;}
+.result .record{padding-top:80px;}
+.result .record h3{width:fit-content;padding:10px 20px;background:#547dab;color:#fff;border-radius:10px;margin-bottom:20px;}
+.result .record table{width:100%;padding-bottom:10px;font-size:18px;border:solid 2px #547dab;border-radius:10px;}
+.result .record table thead tr{background:#547dab;border-radius:10p 10px 0 0;}
+.result .record table thead tr th{padding:15px 0;color:#fff;}
+.result .record table tbody tr td{padding:5px 0;border-bottom:solid 1px #eee;text-align:center;}
 
 /* 이미지선택->마리오 */
 .wrap .card_section .mario li.card01 .card_wrap .back {background:url('../img/card_v2_01.webp') 0 30px/ 100% no-repeat;}
@@ -62,15 +68,16 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 .wrap .card_section .mario li.card09 .card_wrap .back {background:url('../img/card_v2_09.webp') 33px 76px/ 67% no-repeat;}
 
 /* top_menu */
-.top_menu{width:100%;padding:30px 5% 20px;margin-left:-50%;;display:flex;align-items: center;justify-content:space-between;position:fixed;top:-10px;left:50%;z-index:10;box-sizing:border-box;}
+.top_menu{width:100%;padding:30px 5% 20px;margin-left:-50%;;display:flex;align-items: center;justify-content:space-between;position:fixed;top:-10px;left:50%;z-index:10;box-sizing:border-box;color:#222222;}
 .top_menu .bg{background:#fff;filter:blur(5px);position:absolute;z-index:-1;top:0;left:0;width:100%;height:100%;opacity:.9;}
 .top_menu a[class^=btn]{display:block;font-size:0;text-indent:-999999px;transition:.2s;}
 .top_menu a[class^=btn]:hover{opacity:.5;filter:blur(1px);}
 .top_menu a.btn_back{background-image:url(../img/go_back.png);width:43px;height:43px;background-size:100%;}
-.top_menu a.btn_hint{background-image:url(../img/hint_icon.png);background-size:100%;background-position:50%;width:50px;height:50px;}
+.top_menu a.btn_hint{background-image:url(../img/hint_icon.png);background-size:100%;background-position:50%;width:46px;height:46px;}
 .top_menu a.btn_hint.off{opacity:.5;cursor:not-allowed;}
-.top_menu .hint_section{display:flex;align-items: center;margin-left:-41%;}
+.top_menu .hint_section{display:flex;align-items: center;}
 .top_menu .hint_section p{margin-left:10px;letter-spacing:-1px;font-size:18px;}
 .top_menu .life ul{padding:0;}
 .top_menu .life ul li{width:40px;height:40px;background-image:url(../img/life_img.png);background-size:100%;}
 .top_menu .life ul li.off{filter:grayscale(1);opacity:.4;}
+.top_menu .timer{padding:5px 10px;font-size:18px;border-radius:20px;border:2px solid #222222;}
