--- a/card-matching/src/style.css
+++ b/card-matching/src/style.css
@@ -69,7 +69,7 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 .top_menu .bg{background:#fff;filter:blur(5px);position:absolute;z-index:-1;top:0;left:0;width:100%;height:100%;opacity:.9;}
 .top_menu a[class^=btn]{display:block;font-size:0;text-indent:-999999px;transition:.2s;}
 .top_menu a[class^=btn]:hover{opacity:.5;filter:blur(1px);}
-.top_menu a.btn_back{background-image:url(./img/go_back.png);width:43px;height:43px;background-size:100%;}
+.top_menu a.btn_back{background:url(./img/go_back.png) no-repeat;width:43px;height:42px;background-size:100%;}
 .top_menu a.btn_hint{background-image:url(./img/hint_icon.png);background-size:100%;background-position:50%;width:46px;height:46px;}
 .top_menu a.btn_hint.off{opacity:.5;cursor:not-allowed;}
 .top_menu .hint_section{display:flex;align-items: center;}
