--- a/card-matching/src/style.css
+++ b/card-matching/src/style.css
@@ -2,7 +2,8 @@
 li{list-style:none;}
 a,
 a:visited {text-decoration:none;}
-a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto;font-weight:600;text-align:center;line-height:50px;color:#FFF;border-radius:5px;transition:all 0.2s ;background: #a4d0ff;box-shadow: 0px 5px 0px 0px #547dab;}
+button{border:0;background-color:transparent;}
+.button {display:block;position:relative;width:120px;padding:0;margin:50px auto;font-weight:600;text-align:center;line-height:50px;color:#FFF;border-radius:5px;transition:all 0.2s ;background: #a4d0ff;box-shadow: 0px 5px 0px 0px #547dab;border:0;}
 .button:hover {transform:translateY(5px);box-shadow: 0px 0px 0px 0px #007144;}
 .button::before {background:#00AE68;}
 
@@ -67,14 +68,19 @@ a.button {display:block;position:relative;width:120px;padding:0;margin:50px auto
 /* top_menu */
 .top_menu{width:100%;padding:30px 5% 20px;margin-left:-50%;;display:flex;align-items: center;justify-content:space-between;position:fixed;top:-10px;left:50%;z-index:10;box-sizing:border-box;color:#222222;}
 .top_menu .bg{background:#fff;filter:blur(5px);position:absolute;z-index:-1;top:0;left:0;width:100%;height:100%;opacity:.9;}
-.top_menu a[class^=btn]{display:block;font-size:0;text-indent:-999999px;transition:.2s;}
-.top_menu a[class^=btn]:hover{opacity:.5;filter:blur(1px);}
-.top_menu a.btn_back{background:url(./img/go_back.png) no-repeat;width:43px;height:43px;background-size:100%;}
-.top_menu a.btn_hint{background-image:url(./img/hint_icon.png);background-size:100%;background-position:50%;width:46px;height:46px;}
-.top_menu a.btn_hint.off{opacity:.5;cursor:not-allowed;}
+.top_menu button[class^=btn]{display:block;font-size:0;text-indent:-999999px;transition:.2s;}
+.top_menu button[class^=btn]:hover{opacity:.5;filter:blur(1px);}
+.top_menu button.btn_back{background:url(./img/go_back.png) no-repeat;width:43px;height:43px;background-size:100%;}
+.top_menu button.btn_hint{background-image:url(./img/hint_icon.png);background-size:100%;background-position:50%;width:46px;height:46px;}
+.top_menu button.btn_hint.off{opacity:.5;cursor:not-allowed;}
 .top_menu .hint_section{display:flex;align-items: center;}
 .top_menu .hint_section p{margin-left:10px;letter-spacing:-1px;font-size:18px;}
 .top_menu .life ul{padding:0;}
 .top_menu .life ul li{width:40px;height:40px;background-image:url(./img/life_img.png);background-size:100%;}
 .top_menu .life ul li.off{filter:grayscale(1);opacity:.4;}
 .top_menu .timer{padding:5px 10px;font-size:18px;border-radius:20px;border:2px solid #222222;}
+
+/* 숨김 */
+.card_section,
+.fail_section,
+.result{display:none;}
